# via-rail-notif

./: Dockerfile  Makefile  README.md  devcontainer.json  main.py  pyproject.toml  test_main.py
.devcontainer/: devcontainer.json
.github/workflows/: lint-and-test.yml
src/via_rail_notif/tests/: test_main.py
