[tool.poetry]
name = "via-rail-notif"
version = "0.1.0"
description = "A FastAPI application that says Hello World"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
